objects/LLC_BI__Review_Loan__c.object
<CustomObject>
    <description>This object is used to show the loan involved in a Review record.</description>
    <fields>
        <fullName>LLC_BI__Data__c</fullName>
        <description>This field auto-populates with configurable data when the review is approved. The data is stored in JSON format.</description>
        <label>Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to lookup to the Loan record that is being included in the Review. This is automatically populated when the review is initiated, and loans are selected for review. This field is not editable on the review record, however it is used in populating the &quot;Loans&quot; and &quot;Relationship&quot; list sections of the review record.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Review Loans</relationshipLabel>
        <relationshipName>Review_Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Review__c</fullName>
        <description>This field is the master-detail, used to specify which review record the loans should be visible on. This field is automatically populated when a review is initiated for the loans. This field is not editable on the review record, however it is used in populating the &quot;Loans&quot; and &quot;Relationship&quot; list sections of the review record.</description>
        <label>Review</label>
        <referenceTo>LLC_BI__Review__c</referenceTo>
        <relationshipLabel>Review Loans</relationshipLabel>
        <relationshipName>Review_Loans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Review Loan</label>
    <nameField>
        <label>Review Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Review Loans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>